--- a/vacinas.html
+++ b/vacinas.html
@@ -28,7 +28,7 @@
             <label for="nome_vacina">Nome da Vacina:</label>
             <input type="text" id="nome_vacina" name="nome_vacina" required>
 
-            <label for="data_ultima_dose">Dados da Última Dose:</label>
+            <label for="data_ultima_dose">Data da Última Dose:</label>
             <input type="date" id="data_ultima_dose" name="data_ultima_dose" required>
 
             <label for="data_proxima_dose">Data da Próxima Dose:</label>
@@ -56,6 +56,9 @@
                 <option value="a cada 3 semanas">a cada 3 semanas</option>
                 <option value="a cada 1 mês">a cada 1 mês</option>
             </select>
+
+            <label for="doenca">Doença:</label>
+            <input type="text" id="doenca" name="doenca" required>
 
             <button type="submit">Registrar</button>
         </form>
